# Grocy_Amazon_AutoBuy

./: .env.example  .env.production  .env.server  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
homeassistant/: automations.yaml
homeassistant/custom_components/grocy_autobuy/: __init__.py  manifest.json
src/grocy_amazon_autobuy/: __init__.py  config.py  grocy_client.py  homeassistant_client.py  main.py  models.py  order_service.py  telegram_client.py
tests/: __init__.py  test_grocy_client.py  test_models.py  test_telegram.py
